agregarHorasProductivas terminado (Feli A)

--- a/Views/Home/Estadisticas.cshtml
+++ b/Views/Home/Estadisticas.cshtml
@@ -4,7 +4,7 @@
             
               <div>
 
-                 <h2 id="dia"> @ViewBag.horaDiaria horas </h2>
+                 <h2 id="dia"> @ViewBag.horaDiaria minutos </h2>
 
               </div>
 
@@ -14,43 +14,43 @@
 
                 <div>
 
-                  <h2 id="semanal1"> @ViewBag.horasSemanales[0] horas </h2>
+                  <h2 id="semanal1"> @ViewBag.horasSemanales[0] minutos </h2>
 
                 </div>
 
                 <div>
 
-                  <h2 id="semanal2"> @ViewBag.horasSemanales[1] horas </h2>
+                  <h2 id="semanal2"> @ViewBag.horasSemanales[1] minutos </h2>
 
                 </div>
 
                 <div>
 
-                  <h2 id="semanal3"> @ViewBag.horasSemanales[2] horas </h2>
+                  <h2 id="semanal3"> @ViewBag.horasSemanales[2] minutos </h2>
 
                 </div>
 
                 <div>
 
-                  <h2 id="semanal4"> @ViewBag.horasSemanales[3] horas </h2>
+                  <h2 id="semanal4"> @ViewBag.horasSemanales[3] minutos </h2>
 
                 </div>
 
                 <div>
 
-                  <h2 id="semanal5"> @ViewBag.horasSemanales[4] horas </h2>
+                  <h2 id="semanal5"> @ViewBag.horasSemanales[4] minutos </h2>
 
                 </div>
 
                 <div>
 
-                  <h2 id="semanal6"> @ViewBag.horasSemanales[5] horas </h2>
+                  <h2 id="semanal6"> @ViewBag.horasSemanales[5] minutos </h2>
 
                 </div>
 
                 <div>
 
-                  <h2 id="semanal7"> @ViewBag.horasSemanales[6] horas </h2>
+                  <h2 id="semanal7"> @ViewBag.horasSemanales[6] minutos </h2>
 
                 </div>
 
@@ -61,25 +61,25 @@
 
             <div>
               <h2 id="mensual1">
-                @ViewBag.horasMensuales[0] horas
+                @ViewBag.horasMensuales[0] minutos
               </h2>
             </div>
 
             <div>
               <h2 id="mensual2">
-                @ViewBag.horasMensuales[1] horas
+                @ViewBag.horasMensuales[1] minutos
               </h2>
             </div>
 
             <div>
               <h2 id="mensual3">
-                @ViewBag.horasMensuales[2] horas
+                @ViewBag.horasMensuales[2] minutos
               </h2>
             </div>
 
             <div>
               <h2 id="mensual4">
-                @ViewBag.horasMensuales[3] horas
+                @ViewBag.horasMensuales[3] minutos
               </h2>
             </div>
 
