--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -36,6 +36,6 @@
     <!-- Botones de acción -->
     <div class="perfil-botones">
         <a href='@Url.Action("Editar_Perfil","Home")' class="perfil-btn perfil-btn-editar">Editar</a>
-        <a href='@Url.Action("Index","Home")' class="perfil-btn perfil-btn-logout">Log Out</a>
+        <a href='@Url.Action("LogOut","Account")' class="perfil-btn perfil-btn-logout">Log Out</a>
     </div>
 </main>
