css de tienda terminado

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,13 @@
       <img src="/Imagenes/NoHaze-Logo.png" alt="NoHaze Logo">
     </a>
 
+ <!-- Contador de HazeCoins -->
+    <div class="navbar-monedas">
+        <span class="navbar-monedas-cantidad">120</span>
+        <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="Moneda">
+    </div>
+
+
     <!-- Links horizontales para desktop (sin Log Out) -->
     <ul class="navbar-nav-desktop">
       <li class="nav-item">
