--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2822,6 +2822,7 @@ main:not(.no-header) {
     .tienda-grid {
         grid-template-columns: repeat(3, 1fr);
         gap: 30px;
+        margin-left:-30%;
     }
 
     .tienda-card {
