--- a/Views/Home/Editar_Perfil.cshtml
+++ b/Views/Home/Editar_Perfil.cshtml
@@ -1,8 +1,18 @@
 <main class="editar-perfil-page">
 
-<img src="@ViewBag.Usuario.foto" alt="foto de perfil" />
+<div class="perfil-photo-edit-container">
+    <img src="/Imagenes/FotoPerfil.jpg" alt="foto de perfil" id="previewFoto" />
+    <label for="inputFoto" class="perfil-edit-button" title="Cambiar foto de perfil">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+            <path d="M10.5 8.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
+            <path d="M2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4zm.5 2a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1m9 2.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"/>
+        </svg>
+    </label>
+</div>
 
 <form action='@Url.Action("aceptarCambiosPerfil", "Home")' method="POST">
+
+    <input type="file" id="inputFoto" name="foto" accept="image/*" style="display: none;" onchange="previsualizarImagen(event)" />
 
     <label>Username</label>
     <input type="text" name="username" value="@ViewBag.Usuario.username"/>
@@ -21,5 +31,23 @@
 </form>
 
 <a href='@Url.Action("Perfil", "Home")'>Cancelar</a> 
+
+
+<script>
+function previsualizarImagen(event) {
+    const input = event.target;
+    const preview = document.getElementById('previewFoto');
+    
+    if (input.files && input.files[0]) {
+        const reader = new FileReader();
+        
+        reader.onload = function(e) {
+            preview.src = e.target.result;
+        }
+        
+        reader.readAsDataURL(input.files[0]);
+    }
+}
+</script>
 
 </main>
