--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -97,8 +97,10 @@
 
      <!-- Contador de HazeCoins -->
     <div class="navbar-monedas">
-        <span class="navbar-monedas-cantidad">120</span>
+     <a href='@Url.Action("Pasar", "Home", new {Direccion = "Tienda_Catalogo"})'>
+        <span class="navbar-monedas-cantidad" id="ValorMonedas">120</span>
         <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="Moneda">
+     </a>
     </div>
 
     <!-- Botón hamburguesa para mobile (ahora a la derecha) -->
