cambiar foto perfil

--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -10,7 +10,7 @@
                 <img src="/Imagenes/FotoPerfil.jpg" alt="Foto de perfil" class="perfil-photo">
             }else
             {
-                <img src="@fotoUsuario" alt="Foto de perfil" class="perfil-photo">
+                <img src="/Imagenes/@ViewBag.fotoUsuario" alt="Foto de perfil" class="perfil-photo">
             }
         }
         </div>
